--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+  "author": "Lester Cheong",
   "name": "colorful-mermaid",
   "displayName": "Colorful Mermaid",
   "description": "A VSCode extension for Mermaid diagrams with syntax highlighting and linting.",
-  "version": "0.0.6",
+  "version": "0.0.7",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cheonglol/colorful-mermaid.git"
+  },
   "publisher": "cheonglol",
   "engines": {
     "vscode": "^1.97.0"
