--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "mermaid": "^11.4.1"
+    "@mermaid-js/parser": "^0.3.0",
+    "mermaid": "^11.3.0"
   }
 }
